Libreria de HW, problema con CTRL9_REG

--- a/Firmware/CMakeLists.txt
+++ b/Firmware/CMakeLists.txt
@@ -39,6 +39,8 @@ add_executable(Firmware
     src/Firmware.c
     src/hardware/imu.c
     src/drivers/i2c_driver.c
+    src/drivers/spi_driver.c
+    src/step_counter.c
 )
 
 pico_set_program_name(Firmware "Firmware")
@@ -59,8 +61,12 @@ target_include_directories(Firmware PRIVATE
 
 # Add any user requested libraries
 target_link_libraries(Firmware 
+        pico_stdlib
         hardware_spi
         hardware_i2c
+        hardware_sync
+        hardware_dma
+        
         )
 
 pico_add_extra_outputs(Firmware)
