--- a/Firmware/.vscode/settings.json
+++ b/Firmware/.vscode/settings.json
@@ -37,9 +37,12 @@
     "raspberry-pi-pico.cmakePath": "${HOME}/.pico-sdk/cmake/v3.28.6/bin/cmake",
     "raspberry-pi-pico.ninjaPath": "${HOME}/.pico-sdk/ninja/v1.12.1/ninja",
     "files.associations": {
+        "*.embeddedhtml": "html",
         "i2c_driver.h": "c",
         "spi_driver.h": "c",
-        "stdio.h": "c"
+        "stdio.h": "c",
+        "max30102.h": "c",
+        "runtime.h": "c"
     },
     "C_Cpp.errorSquiggles": "enabled"
 }
